Mon Jan 21 08:24:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Corrected link

Thu Jan 17 12:25:40 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/debian.control:
          Fixed depencency on libssl-dev, thanks to Michael Ganz
          <michael_ganz at t-online dot de> for reporting this

Thu Jan 17 12:23:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sig_Handler.cpp:
          Layout changes

        * docs/bczar/bczar.html:
          Updated packages

        * html/Stats/index.shtml:
          Added another page

Fri Jan  4 21:52:14 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_linux_clang.GNU:

          Added clang command-line option required to build TAO.

Fri Jan  4 12:11:12 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-init-suse/init.d/tao-cosconcurrency:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosevent:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnaming:
        * rpmbuild/ace-tao-init-suse/init.d/tao-cosnotification:
        * rpmbuild/ace-tao-init-suse/init.d/tao-costrading:
        * rpmbuild/ace-tao-init-suse/init.d/tao-rtevent:
          Add $network to Required-Start line, thanks to John Fletcher
          <john dot fletcher at rd dot bbc dot co dot uk> for reporting
          this.

Thu Jan  3 22:53:44 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_netdb.cpp (ACE_OS::getmacaddress): On Linux, search for
          an interface to get the MAC address for; don't assume eth0 is
          present and usable.

        * tests/Bug_3744_Regression_Test.cpp: Fix ACE_LOG_MSG output.

Wed Jan  2 19:19:58 UTC 2013  Thomas Girard  <thomas.g.girard@free.fr>

        * ace/Service_Config.h: ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE
          fix when ACE_VERSIONED_SO=2. Because of '.' in the version,